make change to makefile

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,7 +2,7 @@ EXECUTABLE_NAME=RGB2GREY
 CPP=g++
 NVCC=nvcc
 ARCH=sm_30
-INC=-I/usr/local/cuda/include/
+INC=-I/usr/local/cuda/include/ -I/usr/local/include/opencv4
 NVCCFLAGS=-Wall -Wextra -Werror -Wshadow -Ofast -fomit-frame-pointer -march=native -funroll-all-loops -fpeel-loops -ftracer -ftree-vectorize
 CPPFLAGS=-Wall -Wextra -Werror -Wshadow -pedantic -Ofast -std=gnu++17 -fomit-frame-pointer -march=native -flto -funroll-all-loops -fpeel-loops -ftracer -ftree-vectorize
 LIBS=-L/usr/local/cuda/lib64 -L/usr/local/lib -lcudart -lopencv_core -lopencv_imgproc -lopencv_features2d -lopencv_highgui -lopencv_imgcodecs
