make change to makefile

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,7 @@ NVCC=nvcc
 ARCH=sm_30
 INC=-I/usr/local/cuda/include/ -I/usr/local/include/opencv4
 NVCCFLAGS=-Wall -Wextra -Werror -Wshadow -Ofast -fomit-frame-pointer -march=native -funroll-all-loops -fpeel-loops -ftracer -ftree-vectorize
-CPPFLAGS=-O0 -g3 -Wall -c -fmessage-length=0 -std=c++17 -MMD -MP -MF"$(@:%.o=%.d)" -MT"$(@)" -o "$@" "$<"
+CPPFLAGS=-O0 -g3 -Wall -c -fmessage-length=0 -std=c++17
 LIBS=-L/usr/local/cuda/lib64 -L/usr/local/lib -lcudart -lopencv_core -lopencv_imgproc -lopencv_features2d -lopencv_highgui -lopencv_imgcodecs
 CPPSOURCES=$(wildcard *.cpp)
 CUSOURCES=$(wildcard *.cu)
